Add package dir for building deb package

--- a/package/nfpm.yaml
+++ b/package/nfpm.yaml
@@ -9,7 +9,7 @@ description: |
   Simple software for keyboard colour controling.
 license: "MIT"
 contents:
-  - src: ./legion-kb-rgb
+  - src: ../target/release/legion-kb-rgb
     dst: /usr/local/bin/kbrgb
 overrides:
   deb:
